--- a/bolt-on-out-of-process-rate-limits/Makefile
+++ b/bolt-on-out-of-process-rate-limits/Makefile
@@ -2,7 +2,7 @@ LOAD_TEST_RATE=500
 LOAD_TEST_TARGET=http://localhost:8080
 
 stack:
-	docker-compose down && docker-compose up
+	docker-compose down && docker-compose up -d
 
 load-test:
 	echo "GET $(LOAD_TEST_TARGET)/slow" | vegeta attack -rate=$(LOAD_TEST_RATE) -duration=0 | tee results.bin | vegeta report
