--- a/bolt-on-out-of-process-rate-limits/config/grafana_prometheus_datasource.yml
+++ b/bolt-on-out-of-process-rate-limits/config/grafana_prometheus_datasource.yml
@@ -13,7 +13,7 @@ datasources:
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string> url
-  url: http://localhost:9090
+  url: http://prom:9090
   # <string> database password, if used
   password:
   # <string> database user, if used
@@ -42,4 +42,4 @@ datasources:
     tlsClientKey: "..."
   version: 1
   # <bool> allow users to edit datasources from the UI.
-  editable: false
+  editable: true
