--- a/bolt-on-out-of-process-rate-limits/config/prometheus.yml
+++ b/bolt-on-out-of-process-rate-limits/config/prometheus.yml
@@ -32,15 +32,15 @@ scrape_configs:
   - job_name: "node"
     scrape_interval: "15s"
     static_configs:
-      - targets: ['localhost:9100']
+      - targets: ['exporter:9100']
 
   - job_name: "envoy"
     scrape_interval: 5s
     metrics_path: /stats/prometheus
     static_configs:
-      - targets: ['localhost:9901']
+      - targets: ['envoy:9901']
 
   - job_name: "fakeapi"
     scrape_interval: "15s"
     static_configs:
-      - targets: ['localhost:8080']
+      - targets: ['fakeapi:8080']
