Make datasources editable

--- a/simple-memory-leak/stack/config/grafana_prometheus_datasource.yml
+++ b/simple-memory-leak/stack/config/grafana_prometheus_datasource.yml
@@ -42,4 +42,4 @@ datasources:
     tlsClientKey: "..."
   version: 1
   # <bool> allow users to edit datasources from the UI.
-  editable: false
+  editable: true
